<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.DriverDashboard"
    tools:openDrawer="start">


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp">

            <ImageView
                android:id="@+id/nav"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_centerVertical="true"
                android:src="@drawable/img_menu" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:fontFamily="@font/black_ops_one"
                android:text="@string/app_name"
                android:textAllCaps="true"
                android:textColor="@color/yellow"
                android:textSize="35sp" />

            <ImageView
                android:id="@+id/sign_out"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:src="@drawable/img_sign_out" />

        </RelativeLayout>


        <ImageView
            android:id="@+id/videoStream"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_centerHorizontal="true" />


        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingTop="5dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <RelativeLayout
                    android:layout_width="110dp"
                    android:layout_height="85dp"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/card_1">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="8dp"
                        android:fontFamily="@font/basic"
                        android:text="@string/speed"
                        android:textColor="@color/purple" />

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="33dp"
                        android:src="@drawable/img_speed" />

                    <TextView
                        android:id="@+id/speed_log"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="60dp"
                        android:fontFamily="@font/basic"
                        android:text="@string/speed_log"
                        android:textColor="@color/yellow" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="110dp"
                    android:layout_height="85dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="2dp"
                    android:layout_marginRight="5dp"
                    android:background="@drawable/card_1">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="3dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginRight="3dp"
                        android:fontFamily="@font/basic"
                        android:gravity="center"
                        android:text="@string/stop_requested"
                        android:textColor="@color/yellow"
                        android:textSize="16dp" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="110dp"
                    android:layout_height="85dp"
                    android:layout_marginLeft="10dp"
                    android:background="@drawable/card_1">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="7dp"
                        android:fontFamily="@font/basic"
                        android:text="@string/distance"
                        android:textColor="@color/purple" />

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="33dp"
                        android:src="@drawable/img_distance" />

                    <TextView
                        android:id="@+id/distance_log"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="60dp"
                        android:fontFamily="@font/basic"
                        android:text="@string/distance_log"
                        android:textColor="@color/yellow" />

                </RelativeLayout>
            </LinearLayout>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginLeft="40dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/basic"
                android:text="@string/set_speed"
                android:textColor="@color/purple" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="118dp"
                android:layout_marginBottom="24dp"
                android:text="0%"
                android:textColor="@color/yellow"
                android:textSize="13dp" />

            <SeekBar
                android:id="@+id/seekBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:paddingTop="20dp"
                android:paddingBottom="5dp"
                android:thumbTint="@color/yellow" />


        </RelativeLayout>


        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingTop="5dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"></LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <RelativeLayout
                    android:layout_width="70dp"
                    android:layout_height="85dp"
                    android:layout_gravity="center"
                    android:layout_marginRight="5dp"
                    android:background="@drawable/card_1">

                    <ToggleButton
                        android:id="@+id/cruise_control"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/card_1"
                        android:fontFamily="@font/basic"
                        android:onClick="onCruiseControlBtn"
                        android:paddingTop="50dp"
                        android:textAllCaps="false"
                        android:textColor="@color/purple"
                        android:textOff="@string/cruise_control"
                        android:textOn="@string/cruise_control_dis" />

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="5dp"
                        android:src="@drawable/img_cruise_control" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="70dp"
                    android:layout_height="85dp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:background="@drawable/card_1"
                    android:onClick="brakeBtn">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="9dp"
                        android:src="@drawable/img_brake" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="58dp"
                        android:fontFamily="@font/basic"
                        android:gravity="center_horizontal"
                        android:text="@string/brake"
                        android:textAlignment="center"
                        android:textColor="@color/purple" />

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/next_stop"
                    android:layout_width="70dp"
                    android:layout_height="85dp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:background="@drawable/card_1"
                    android:onClick="changeStop">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="5dp"
                        android:src="@drawable/img_next_stop" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="58dp"
                        android:fontFamily="@font/basic"
                        android:gravity="center_horizontal"
                        android:text="@string/next_stop"
                        android:textAlignment="center"
                        android:textColor="@color/purple" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="70dp"
                    android:layout_height="85dp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="5dp">

                    <ToggleButton
                        android:id="@+id/park"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/card_1"
                        android:fontFamily="@font/basic"
                        android:paddingTop="50dp"
                        android:textAllCaps="false"
                        android:textColor="@color/purple"
                        android:textOff="@string/park"
                        android:textOn="@string/unpark" />

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="9dp"
                        android:src="@drawable/img_park" />

                </RelativeLayout>

            </LinearLayout>

        </RelativeLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="65dp">

            <TextView
                android:id="@+id/busLineName"
                android:layout_width="68dp"
                android:layout_height="32dp"
                android:layout_marginStart="4dp"
                android:layout_marginLeft="4dp"
                android:autoText="false"
                android:clickable="false"
                android:editable="false"
                android:fontFamily="@font/basic"
                android:gravity="center|center_horizontal"
                android:importantForAutofill="no"
                android:textColor="@color/yellow"
                android:textSize="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.575" />

            <TextView
                android:id="@+id/nextStopView"
                android:layout_width="203dp"
                android:layout_height="32dp"
                android:layout_marginStart="4dp"
                android:layout_marginLeft="4dp"
                android:clickable="true"
                android:editable="false"
                android:fontFamily="@font/basic"
                android:gravity="center|center_vertical"
                android:importantForAutofill="no"
                android:text="@string/display_first_stop"
                android:textColor="@color/yellow"
                android:textSize="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/busLineName"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.558" />

            <Button
                android:id="@+id/displayStopList"
                android:layout_width="108dp"
                android:layout_height="55dp"
                android:onClick="displayAllStops"
                android:text="@string/display_all_stops"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.483"
                app:layout_constraintStart_toEndOf="@+id/nextStopView"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.64" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.example.pathfinder.Activities.ThumbstickView
            android:id="@+id/testThumbstick"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>

    <include
        android:id="@+id/busLineInfo"
        layout="@layout/bus_route"
        android:layout_width="393dp"
        android:layout_height="200dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/linearLayout"
        app:layout_constraintTop_toTopOf="@+id/linearLayout" />
</androidx.constraintlayout.widget.ConstraintLayout>


