<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.DashboardActivity"
    tools:openDrawer="start">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/white">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp">

            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@drawable/img_menu"
                android:layout_centerVertical="true"/>

            <ImageView
                android:id="@+id/cameraView"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:contentDescription="cameraView"
                android:src="@drawable/img_camera" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textSize="40sp"
                android:fontFamily="@font/black_ops_one"
                android:textColor="@color/yellow"
                android:layout_centerHorizontal="true"
                android:textAllCaps="true"
                />
        </RelativeLayout>

        <ImageView
            android:id="@+id/videoStream"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginTop="5dp"
            android:layout_centerHorizontal="true"/>

        <RelativeLayout
            android:paddingTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/set_speed"
                android:fontFamily="@font/basic"
                android:textColor="@color/purple"
                android:layout_marginBottom="10dp"
                android:layout_marginStart="40dp"
                android:layout_marginLeft="40dp" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="105dp"
                android:layout_marginBottom="24dp"
                android:text="0%"
                android:textSize="13dp"
                android:textColor="@color/yellow"/>

            <SeekBar
                android:id="@+id/seekBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="30dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:thumbTint="@color/yellow"
                android:onClick="setSpeed"/>

        </RelativeLayout>



        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingTop="5dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">


            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <RelativeLayout
                    android:layout_width="70dp"
                    android:layout_height="85dp"
                    android:layout_gravity="center"
                    android:background="@drawable/card_1"
                    android:layout_marginRight="5dp"

                    >

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_marginTop="5dp"
                        android:src="@drawable/img_cruise_control"
                        android:layout_centerHorizontal="true"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:text="@string/cruise_control"
                        android:textAlignment="center"
                        android:gravity="center_horizontal"
                        android:fontFamily="@font/basic"
                        android:textColor="@color/purple"
                        android:layout_marginTop="50dp"/>

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="70dp"
                    android:layout_height="95dp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:background="@drawable/card_1"
                    android:onClick="brakeBtn">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="7dp"
                        android:src="@drawable/img_brake" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="58dp"
                        android:fontFamily="@font/basic"
                        android:gravity="center_horizontal"
                        android:text="@string/brake"
                        android:textAlignment="center"
                        android:textColor="@color/purple" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="70dp"
                    android:layout_height="85dp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="5dp"
                    android:background="@drawable/card_1"
                    android:id="@+id/park">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_marginTop="5dp"
                        android:src="@drawable/img_park"
                        android:layout_centerHorizontal="true"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:text="@string/park"
                        android:textAlignment="center"
                        android:gravity="center_horizontal"
                        android:fontFamily="@font/basic"
                        android:textColor="@color/purple"
                        android:layout_marginTop="58dp"/>

                </RelativeLayout>

            </LinearLayout>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingTop="5dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <RelativeLayout
                    android:layout_width="130dp"
                    android:layout_height="100dp"
                    android:background="@drawable/card_1"
                    android:layout_marginRight="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/speed"
                        android:fontFamily="@font/basic"
                        android:textColor="@color/purple"
                        android:layout_marginTop="10dp"
                        android:layout_marginLeft="10dp"/>

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:src="@drawable/img_speed"
                        android:layout_marginTop="40dp"
                        android:layout_marginLeft="10dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/speed_log"
                        android:fontFamily="@font/basic"
                        android:textColor="@color/yellow"
                        android:layout_marginTop="70dp"
                        android:layout_marginLeft="10dp"
                        android:id="@+id/speed_log"/>

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="130dp"
                    android:layout_height="100dp"
                    android:background="@drawable/card_1"
                    android:layout_marginLeft="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/distance"
                        android:fontFamily="@font/basic"
                        android:textColor="@color/purple"
                        android:layout_marginTop="10dp"
                        android:layout_marginLeft="10dp"/>

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:src="@drawable/img_distance"
                        android:layout_marginTop="40dp"
                        android:layout_marginLeft="10dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/distance_log"
                        android:fontFamily="@font/basic"
                        android:textColor="@color/yellow"
                        android:layout_marginTop="70dp"
                        android:layout_marginLeft="10dp"
                        android:id="@+id/distance_log"/>

                </RelativeLayout>
            </LinearLayout>
        </RelativeLayout>

        <com.example.pathfinder.Activities.ThumbstickView
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:id="@+id/testThumbstick"/>

    </LinearLayout>

</androidx.drawerlayout.widget.DrawerLayout>