<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.DriverDashboard"
    tools:openDrawer="start">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/white">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:id="@+id/back"
                android:src="@drawable/img_back"
                android:layout_centerVertical="true"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textSize="35sp"
                android:fontFamily="@font/black_ops_one"
                android:textColor="@color/yellow"
                android:layout_centerHorizontal="true"
                android:textAllCaps="true"
                />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:background="@drawable/card_1"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="2dp"
            android:layout_gravity="center"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/basic"
                android:textSize="16dp"
                android:text="@string/stop_requested"
                android:textColor="@color/yellow"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="22dp"

                android:gravity="center"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingTop="5dp"
            android:layout_marginTop="30dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <RelativeLayout
                    android:layout_width="140dp"
                    android:layout_height="100dp"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/card_1">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="40dp"
                        android:layout_marginTop="30dp"
                        android:textSize="18sp"
                        android:gravity="center_vertical"
                        android:fontFamily="@font/basic"
                        android:text="@string/request_stop"
                        android:textColor="@color/purple" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="140dp"
                    android:layout_height="100dp"
                    android:background="@drawable/card_1"
                    android:layout_marginLeft="10dp">


                    <ImageView
                        android:layout_width="55dp"
                        android:layout_height="55dp"
                        android:src="@drawable/img_handicap"
                        android:layout_marginLeft="40dp"
                        android:layout_marginTop="10dp"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/handicap"
                        android:fontFamily="@font/basic"
                        android:textColor="@color/purple"
                        android:layout_marginTop="70dp"
                        android:layout_marginLeft="7dp"
                        />

                </RelativeLayout>
            </LinearLayout>
        </RelativeLayout>

    </LinearLayout>

</androidx.drawerlayout.widget.DrawerLayout>